--- a/ui/my_todo.ui
+++ b/ui/my_todo.ui
@@ -109,7 +109,7 @@
      <property name="geometry">
       <rect>
        <x>690</x>
-       <y>130</y>
+       <y>40</y>
        <width>89</width>
        <height>25</height>
       </rect>
@@ -131,7 +131,7 @@
       <string>Name:</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="TodoName">
      <property name="geometry">
       <rect>
        <x>80</x>
@@ -164,7 +164,7 @@
       <string>Date:</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_4">
+    <widget class="QLineEdit" name="TodoDescription">
      <property name="geometry">
       <rect>
        <x>310</x>
@@ -200,14 +200,43 @@
       <string>Staus:</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_3">
+    <widget class="QPushButton" name="Delete_todo">
+     <property name="geometry">
+      <rect>
+       <x>690</x>
+       <y>120</y>
+       <width>89</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Delete</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="Update_todo">
+     <property name="geometry">
+      <rect>
+       <x>690</x>
+       <y>80</y>
+       <width>89</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Update</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="TodoStatus">
      <property name="geometry">
       <rect>
        <x>80</x>
-       <y>120</y>
-       <width>113</width>
-       <height>25</height>
+       <y>110</y>
+       <width>92</width>
+       <height>23</height>
       </rect>
+     </property>
+     <property name="text">
+      <string>CheckBox</string>
      </property>
     </widget>
    </widget>
